hphp/hack/test/typecheck/like_types/like_casts_generics.php.exp
File "like_casts_generics.php", line 4, characters 8-9:
Invalid `as` expression hint (Typing[4195])
  File "like_casts_generics.php", line 4, characters 8-9:
  The `as` operator cannot be used with an erased generic type parameter
File "like_casts_generics.php", line 5, characters 8-10:
Invalid `as` expression hint (Typing[4195])
  File "like_casts_generics.php", line 5, characters 9-10:
  The `as` operator cannot be used with an erased generic type parameter
File "like_casts_generics.php", line 6, characters 8-9:
Invalid `as` expression hint (Typing[4195])
  File "like_casts_generics.php", line 6, characters 8-9:
  The `as` operator cannot be used with a reified type parameter that is not marked `<<__Enforceable>>`
File "like_casts_generics.php", line 7, characters 8-10:
Invalid `as` expression hint (Typing[4195])
  File "like_casts_generics.php", line 7, characters 9-10:
  The `as` operator cannot be used with a reified type parameter that is not marked `<<__Enforceable>>`
